# python-fast-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/certs/: demo-certificate.p12
app/routers/: conversion.py  editor.py  extraction.py  forms.py  health.py  redaction.py  signing.py  templates.py
app/services/: conversion.py  editor.py  extraction.py  forms.py  redaction.py  signing.py  templates.py
docs/sdk-feedback/: 2026-05-28-form-field-detection-quality.md  2026-05-28-icr-engine-quality.md  DEFECTS.md
docs/sdk-feedback/bug-reports/: 2026-06-01-vision-set-fails-on-image-only-pdfs.md  2026-06-01-vision-state-corruption-after-failure.md  2026-06-02-annotation-get-rect-returns-opaque-handle.md  2026-06-02-corrupt-file-surfaces-wrong-exception.md  2026-06-02-exporter-settings-not-attachable.md  2026-06-02-form-field-collection-returns-base-type.md  2026-06-02-pdfpage-rotation-read-only.md  2026-06-02-redaction-default-save-does-not-apply.md  README.md  (+1 more)
tests/: conftest.py  test_extraction.py  test_extraction_features_workaround.py  test_extraction_fields.py  test_extraction_markdown.py  test_extraction_merge.py  test_extraction_pages.py  test_extraction_tables.py  test_forms_detect.py  test_forms_existing.py  test_redaction.py  test_signing.py
tests/sdk/: README.md  conftest.py  test_annotations.py  test_conversion.py  test_document.py  test_editor.py  test_exporters.py  test_forms.py  test_redaction.py  test_signing.py  test_smoke.py  test_vision.py  test_workflows.py
(+18 files in other folders)
