[project]
name = "nutrient-python-sdk-demo"
version = "0.1.0"
description = "Python FastAPI backend for Nutrient SDK document processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "nutrient-sdk",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
