[project]
name = "nutrient-python-sdk-demo"
version = "0.1.0"
description = "Python FastAPI backend for Nutrient SDK document processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "nutrient-sdk==1.0.8",
    "nutrient-sdk-native==1.0.8",
    "cryptography",
    "python-dotenv",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
# The gitignored local `recipes/` corpus breaks flat-layout auto-discovery.
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "pytest-forked>=1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# nutrient-sdk-native uses SIGSEGV internally during ML inference and form
# operations. pytest's faulthandler plugin intercepts it as a crash. Disable.
addopts = "-p no:faulthandler"
markers = [
    "sdk_defect: marks a test that documents a known SDK defect (registry is internal; filed in JIRA as NAPY tickets)",
]
